--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,26 @@
 {
   "name": "staff-server",
   "private": true,
-  "type": "commonjs",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
-  },
-  "engines": {
-    "node": ">=20"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/cookie-parser": "^1.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.5",
+    "@types/pg": "^8.11.6",
     "typescript": "^5.4.5"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
