--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -2,11 +2,14 @@
   "compilerOptions": {
     "target": "ES2022",
     "module": "CommonJS",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
     "outDir": "dist",
     "rootDir": "src",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "strict": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
