--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "staff-server",
   "private": true,
+  "workspaces": [
+    "server"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node server/dist/index.js"
