--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "CommonJS",
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleResolution": "node",
-    "rootDir": "server/server/src",
+    "rootDir": "server/src",
     "outDir": "server/dist",
     "strict": false,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["server/server/src/**/*"]
+  "include": ["server/src/**/*"]
 }
