--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "ES2022",
     "outDir": "dist",
     "rootDir": "src",
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
