--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "staff-server",
   "private": true,
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
