--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,15 +3,14 @@
     "target": "ES2020",
     "module": "CommonJS",
     "moduleResolution": "node",
+    "rootDir": ".",
     "outDir": "dist",
-    "rootDir": "src",
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
     "strict": false,
     "skipLibCheck": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
