--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ES2022",
-    "moduleResolution": "node",
-    "rootDir": "server/src",
+    "module": "NodeNext",
     "outDir": "server/dist",
-    "strict": false,
+    "rootDir": "server/src",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "strict": true
   },
-  "include": ["server/src/**/*"]
+  "include": ["server/src/**/*.ts"],
+  "exclude": ["node_modules", "server/dist"]
 }
