--- a/server/package.json
+++ b/server/package.json
@@ -9,20 +9,14 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "cookie-parser": "^1.4.6",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.12.0"
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/cookie-parser": "^1.4.6",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.5",
-    "@types/pg": "^8.11.6",
     "typescript": "^5.4.5"
   },
   "engines": {
-    "node": ">=20"
+    "node": "20.x"
   }
 }
