--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -1,4 +1,4 @@
-name: Deploy Staff Server to Azure
+name: Deploy Staff Server to Azure App Service
 
 on:
   push:
@@ -10,23 +10,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Use Node 20
         uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "20"
 
-      - name: Install & build
+      - name: Install dependencies
         working-directory: server
-        run: |
-          npm install
-          npm run build
+        run: npm install
 
-      - name: Deploy to Azure App Service
+      - name: Build
+        working-directory: server
+        run: npm run build
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
-          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
           package: server
