--- a/server/package.json
+++ b/server/package.json
@@ -8,15 +8,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.4"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=20"
   }
 }
