--- a/server/package.json
+++ b/server/package.json
@@ -1,21 +1,20 @@
 {
   "name": "staff-server",
+  "version": "1.0.0",
   "private": true,
-  "type": "module",
-  "main": "dist/index.js",
+  "type": "commonjs",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.14.5",
-    "typescript": "^5.5.4"
-  },
-  "engines": {
-    "node": ">=20"
+    "typescript": "^5.4.5"
   }
 }
