--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "engines": {
-    "node": ">=20"
+    "node": "20.x"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.5"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.10.2",
+    "typescript": "^5.4.2"
   }
 }
