Align App Service build settings

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "node": "20.x"
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
