--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,9 @@
   "engines": {
     "node": "20.x"
   },
+  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
