--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
-    "twilio": "^5.1.0"
+    "twilio": "^5.1.0",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -24,8 +25,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.5",
-    "@types/pg": "^8.11.6",
-    "typescript": "^5.4.5"
+    "@types/pg": "^8.11.6"
   },
   "engines": {
     "node": ">=20"
