--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "start": "node server/dist/index.js"
   },
   "dependencies": {
+    "@types/node": "^20.14.5",
+    "@types/express": "^4.17.21",
+    "@types/pg": "^8.11.6",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -22,10 +25,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.14.5",
-    "@types/pg": "^8.11.6"
+    "@types/jsonwebtoken": "^9.0.6"
   },
   "engines": {
     "node": ">=20"
