--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
-    "twilio": "^5.1.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "twilio": "^5.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
