--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -11,11 +11,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+      - name: Use Node 20
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - name: Install dependencies
+      - name: Install dependencies (server)
         working-directory: server
         run: npm ci
 
@@ -27,16 +28,14 @@ jobs:
         working-directory: server
         run: npm prune --omit=dev
 
-      - name: Prepare deploy package
+      - name: Create deployment zip
         run: |
-          mkdir deploy
-          cp -r server/dist deploy/dist
-          cp server/package.json deploy/package.json
-          cp -r server/node_modules deploy/node_modules
+          cd server
+          zip -r ../server.zip .
 
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: deploy
+          package: server.zip
