--- a/server/package.json
+++ b/server/package.json
@@ -3,22 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "type": "commonjs",
+  "main": "dist/index.js",
   "engines": {
     "node": ">=20"
   },
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "pg": "^8.11.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@types/pg": "^8.10.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.5"
   }
 }
