--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: "20"
 
-      - name: Install dependencies (server)
+      - name: Install dependencies
         working-directory: server
         run: npm ci
 
@@ -38,5 +38,5 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
           package: server.zip
