--- a/server/package.json
+++ b/server/package.json
@@ -4,22 +4,20 @@
   "private": true,
   "type": "commonjs",
   "main": "dist/index.js",
-  "engines": {
-    "node": ">=20"
-  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "pg": "^8.11.5"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "typescript": "^5.4.5",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30",
-    "typescript": "^5.4.5"
+    "@types/node": "^20.11.30"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
