--- a/server/package.json
+++ b/server/package.json
@@ -9,13 +9,15 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
-    "dotenv": "^16.6.1"
+    "pg": "^8.16.3"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.30"
+    "@types/node": "^20.11.30",
+    "@types/pg": "^8.16.0",
+    "typescript": "^5.4.5"
   },
   "engines": {
     "node": ">=20"
