--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
-    "pg": "^8.16.3"
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
+    "twilio": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
