--- a/server/package.json
+++ b/server/package.json
@@ -9,22 +9,14 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3",
-    "twilio": "^5.1.0"
+    "pg": "^8.11.5",
+    "dotenv": "^16.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "@types/pg": "^8.16.0",
+    "@types/pg": "^8.10.2",
     "typescript": "^5.4.5"
-  },
-  "engines": {
-    "node": ">=20"
   }
 }
