--- a/package.json
+++ b/package.json
@@ -4,22 +4,11 @@
   "engines": {
     "node": ">=20"
   },
+  "workspaces": [
+    "server"
+  ],
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
-  },
-  "dependencies": {
-    "axios": "^1.7.7",
-    "dotenv": "^16.6.1",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.5"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.10.2",
-    "typescript": "^5.4.5"
+    "build": "npm --workspace server run build",
+    "start": "npm --workspace server run start"
   }
 }
