--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
+    "module": "CommonJS",
     "outDir": "dist",
     "rootDir": "src",
-    "moduleResolution": "node",
-    "module": "commonjs",
-    "target": "ES2022",
+    "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,
-    "strict": true
+    "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src"]
 }
