--- a/package.json
+++ b/package.json
@@ -8,22 +8,26 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js",
+    "smoke": "NODE_ENV=production PORT=5050 node dist/index.js & PID=$!; sleep 5; curl -fsS http://localhost:5050/ >/dev/null || (kill $PID && exit 1); kill $PID"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
     "twilio": "^5.1.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/ms": "^2.1.0",
     "@types/node": "^20.11.30",
-    "@types/jsonwebtoken": "^9.0.6",
     "@types/pg": "^8.10.2",
     "typescript": "^5.4.5"
   }
