--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -2,35 +2,43 @@ name: Deploy Staff Server to Azure App Service
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: "20"
 
-      - name: Install deps
-        run: npm ci
+      - name: Install dependencies (production)
+        run: |
+          npm ci --omit=dev
 
       - name: Build
-        run: npm run build
+        run: |
+          npm run build
 
       - name: Smoke test (MANDATORY)
-        run: npm run smoke
+        run: |
+          npm run smoke
 
       - name: Prepare deployment package
         run: |
           rm -rf deploy
           mkdir -p deploy
           cp -R dist deploy/dist
-          cp package.json package-lock.json deploy/
+          cp -R node_modules deploy/node_modules
+          cp package.json deploy/package.json
 
-      - name: Deploy to Azure
+      - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
