--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -15,23 +15,15 @@ jobs:
         with:
           node-version: "20"
 
-      # Install ALL deps so TypeScript build passes
       - name: Install dependencies
         run: npm ci
 
-      # Build TypeScript → dist/
       - name: Build
         run: npm run build
 
-      # Smoke test AFTER build
       - name: Smoke test
         run: npm run smoke
 
-      # Remove dev deps, keep prod only
-      - name: Prune dev dependencies
-        run: npm prune --omit=dev
-
-      # Prepare deploy package INCLUDING node_modules
       - name: Prepare deployment package
         run: |
           rm -rf deploy
@@ -40,8 +32,7 @@ jobs:
           cp -R node_modules deploy/node_modules
           cp package.json deploy/
 
-      # Deploy ZIP to Azure
-      - name: Deploy to Azure App Service
+      - name: Deploy to Azure
         uses: azure/webapps-deploy@v3
         with:
           app-name: boreal-staff-server
