--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -2,41 +2,33 @@ name: Deploy Staff Server to Azure App Service
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
   workflow_dispatch:
-
-concurrency:
-  group: staff-server-prod
-  cancel-in-progress: true
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "20"
-          cache: "npm"
+          node-version: '20'
+          cache: 'npm'
 
-      - name: Install
+      - name: Install dependencies
         run: npm ci
 
       - name: Build
         run: npm run build
 
-      - name: Zip artifact
-        run: |
-          cd .
-          zip -r release.zip . -x "**/.git/**" "**/.github/**" "**/node_modules/**"
-
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: release.zip
+          app-name: boreal-staff-server
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: .
