--- a/.github/workflows/azure-appservice.yml
+++ b/.github/workflows/azure-appservice.yml
@@ -37,6 +37,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Bootstrap database schema
+        env:
+          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/staff
+        run: |
+          node -e "const { Client } = require('pg'); (async () => { const client = new Client({ connectionString: process.env.DATABASE_URL }); await client.connect(); await client.query('create extension if not exists \"pgcrypto\";'); await client.query('create table if not exists users (id uuid primary key default gen_random_uuid(), email text unique not null, password_hash text not null, created_at timestamptz not null default now(), updated_at timestamptz not null default now());'); await client.end(); })().catch((err) => { console.error(err); process.exit(1); });"
+
       - name: Build
         run: npm run build
 
