--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,9 @@
     "strict": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "types": ["node", "jest"]
   },
   "include": ["src/**/*"]
 }
