--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
+    "migrate:check": "node dist/migrationsCheck.js",
     "start": "node dist/index.js",
     "test": "jest"
   },
