--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "types": ["node", "jest"]
