--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "noUnusedLocals": true,
     "types": ["node", "jest"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["**/__tests__/**", "**/*.test.ts"]
 }
