--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc -p tsconfig.json",
     "migrate:check": "node dist/migrationsCheck.js",
     "start": "node dist/index.js",
-    "test": "jest"
+    "test": "jest",
+    "ci:test": "NODE_ENV=test npm test"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
