--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "migrate:check": "node dist/migrationsCheck.js",
-    "start": "node dist/index.js",
-    "test": "jest --runInBand --detectOpenHandles --forceExit",
-    "ci:test": "NODE_ENV=test npm test"
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
