--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "node": ">=20"
   },
   "scripts": {
+    "dev": "npm run build && node dist/index.js",
     "build": "tsc -p tsconfig.json",
     "migrate:check": "node dist/migrationsCheck.js",
     "start": "node dist/index.js"
