--- a/package.json
+++ b/package.json
@@ -2,46 +2,21 @@
   "name": "staff-server",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
-  "main": "dist/index.js",
-  "engines": {
-    "node": ">=20"
-  },
+  "type": "module",
   "scripts": {
-    "dev": "npm run build && node dist/index.js",
-    "build": "tsc -p tsconfig.json",
-    "migrate:check": "node dist/migrationsCheck.js",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@azure/storage-blob": "^12.29.1",
-    "applicationinsights": "^2.9.8",
-    "bcryptjs": "^2.4.3",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "helmet": "^8.1.0",
-    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.5",
-    "twilio": "^5.1.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cookie-parser": "^1.4.10",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.21",
-    "@types/helmet": "^0.0.48",
-    "@types/jest": "^29.5.12",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/ms": "^2.1.0",
-    "@types/node": "^20.11.30",
-    "@types/pg": "^8.10.2",
-    "@types/supertest": "^2.0.16",
-    "jest": "^29.7.0",
-    "pg-mem": "^2.1.4",
-    "supertest": "^6.3.4",
-    "ts-jest": "^29.1.2",
-    "typescript": "^5.4.5"
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
