--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.29.1",
+    "applicationinsights": "^3.12.1",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.3",
     "pg": "^8.11.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
+    "pg-mem": "^3.0.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
