--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "npm run build && node dist/index.js",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.29.1",
@@ -28,7 +29,11 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
+    "@types/supertest": "^6.0.2",
+    "jest": "^30.0.5",
     "pg-mem": "^3.0.5",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
